Committed some of the suggestions from Sonatype Lift, fixed bug that it had introduced
Signed-off-by: Julien Nioche <julien@digitalpebble.com>